<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundGrey"
    tools:context=".Activities.ExitActivity">

    <LinearLayout
        android:id="@+id/llAdds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="3dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="14dp">

        <LinearLayout
            android:id="@+id/rellay_about_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="16dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Do you Want to Exit?."
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="22dp"
                android:gravity="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="3">

                <Button
                    android:id="@+id/chip_give_us_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_shape"
                    android:text="@string/about_give_us_5_star"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_shape"
                    android:text="@string/Yes"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_shape"
                    android:text="@string/No"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>
